[package]
name = "ivxv"
version = "0.0.2"
edition = "2024"
description = "Common data types and cryptographic primitives used by IVXV"
license = "Apache-2.0"
repository = "https://github.com/takakv/ivxv"

[dependencies]
der = { version = "0.8.1", features = ["alloc", "derive", "oid"] }
p384 = "0.14.0"
pem = "3.0.6"
sha2 = "0.11.0"
thiserror = "2.0.18"

[dev-dependencies]
rand_chacha = "0.10.0"
